# Jeu_2048

./: CMakeLists.txt  Explication_Jeu_2048.txt  Jeu_2048_terminal.c  README.md  jeu2048_LemoutonAlexis.c  main.c
src/: config.h  game.c  game.h  main.c  mainNEPASSUPPR.c  menu.c  menu.h  render.c  render.h
